--- a/src/assets/scss/section/header.scss
+++ b/src/assets/scss/section/header.scss
@@ -1,6 +1,4 @@
 @charset "utf-8";
-
-
 #header{
     @include position-fixed;
     z-index: 1000;
@@ -21,7 +19,7 @@
             display: block;
             font-size: 13px;
         }
-
+        
     }
     .header_nav{
 
@@ -51,47 +49,50 @@
         @media(max-width:800px){
             display: none;
         }
-
+        
             li{
                 display: inline;
 
+
+               
                 a{
                     display: inline-block;
                     font-size: 14px;
                     padding: 15px;
                     text-transform: uppercase;
                     position: relative;
-
+                    
+                 
                     &::before{
                         content: "";
-                        width: calc(100% - 28px);
+                        width: calc( 100% - 28px);
                         height: 1px;
                         background-color: var(--black);
                         position: absolute;
                         left: 14px;
                         bottom: 10px;
                         transform: scale(0);
-                        transition: all 0.3s;
+                        transform-origin: left center;
+                        transition: transform 0.3s;
                     }
+
                     &:hover::before{
                         transform: scale(1);
                     }
-
                 }
             }
-    
+       
     }
-    .header_nav_mobile{
+    .header_nav_moblie{
         display: none;
         width: 40px;
         height: 40px;
         cursor: pointer;
-        // background-color: gold;
-
+       
         @media(max-width:800px){
             display: block;
         }
-        
+
         span{
             display: block;
             width: 40px;
@@ -121,6 +122,6 @@
                 transition: width 0.3s;
             }
         }
-    
+        
     }
 }
