--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,8 +7,11 @@
 @import "setting/mixin";
 
 //section
-@import "section/skip.scss" ;
-@import "section/header.scss";
-@import "section/intro.scss";
-@import "section/skill.scss";
-@import "section/site.scss";
+@import "section/skip";
+@import "section/header";
+@import "section/intro";
+@import "section/skill";
+@import "section/site";
+@import "section/port";
+@import "section/contact";
+@import "section/footer";
